# robot_data_collection_framework

./: README.md
robot_moveit_config/panda_peg_config/: CMakeLists.txt  package.xml
robot_moveit_config/panda_peg_config/config/: fake_controllers.yaml  panda_peg.srdf  simple_moveit_controllers.yaml
robot_moveit_config/panda_peg_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
robot_moveit_config/ur5_g3f_config/: CMakeLists.txt  package.xml
robot_moveit_config/ur5_g3f_config/config/: fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur5_3finger.srdf
robot_moveit_config/ur5_g3f_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
robot_moveit_config/ur5_peg_config/: CMakeLists.txt  package.xml
robot_moveit_config/ur5_peg_config/config/: fake_controllers.yaml  ompl_planning.yaml  (+4 more)
ur5_data_collect_fw/: CMakeLists.txt  package.xml  setup.py
ur5_data_collect_fw/config/: gripper3f.yaml  item_spawn.xml  panda_peg.yaml  peg_cartesian_controllers.yaml  ur5_controller.yaml
ur5_data_collect_fw/config/world_random_peg/1/: 0.xml  1.xml  10.xml  11.xml  12.xml  13.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  2.xml  20.xml  21.xml  22.xml  23.xml  24.xml  25.xml  26.xml  27.xml  28.xml  29.xml  3.xml  30.xml  31.xml  32.xml  33.xml  34.xml  35.xml  36.xml  37.xml  38.xml  39.xml  4.xml  40.xml  41.xml  42.xml  43.xml  44.xml  (+60 more)
ur5_data_collect_fw/config/world_random_pick/1/: 0.xml  1.xml  10.xml  11.xml  12.xml  13.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  2.xml  20.xml  21.xml  22.xml  23.xml  24.xml  25.xml  26.xml  27.xml  28.xml  29.xml  3.xml  30.xml  31.xml  32.xml  33.xml  34.xml  35.xml  36.xml  37.xml  38.xml  39.xml  4.xml  40.xml  41.xml  42.xml  43.xml  44.xml  (+60 more)
ur5_data_collect_fw/launch/: empty_world_remap.launch  gripper.launch  gripper3f.launch  peg.launch  peg_basic.launch  peg_panda.launch
ur5_data_collect_fw/meshes/: bin.stl  box_cc.stl  box_sq.stl
ur5_data_collect_fw/scripts/: control_peg_in_hole.py  control_peg_in_hole_compliance.py  control_pick.py  moveit_to_compliance_server.py  playback.py  random_position_generator.py  record.py  run_loop.py  spawn_model.py
ur5_data_collect_fw/src/: control_pick.py  control_server.py  count_items.py  joint_control.py  position_control.py  record.py  spawn_model.py
ur5_data_collect_fw/src/checker/: checker.py
ur5_data_collect_fw/src/record_handle/: __init__.py  bag.py  camera.py  contacts_state.py  joint_states.py  pose.py
ur5_data_collect_fw/srv/: Object.srv  PoseGoal.srv  PoseGoal_RPY.srv
ur5_data_collect_fw/urdf/: 3finger.urdf  box_sq.urdf  cube_blue.urdf  cube_green.urdf  cube_red.urdf  cuboid21_green.urdf  cylinder.urdf  cylinder_green.urdf  desk.xacro  example_robot.urdf  panda_peg.urdf.xacro  panda_peg.xacro  ur5.urdf  ur53.urdf  ur5_3.urdf  ur5_3finger.urdf.xacro  ur5_peg.urdf.xacro  ur5_robot.urdf.xacro  ur5peg.urdf
ur5_data_collect_fw/worlds/: empty.world  empty_kinect.world
(+15 files in other folders)
